# aiotarfile

./: Cargo.toml  LICENSE  README.md  aiotarfile.pyi  pyproject.toml  release.py
.github/workflows/: CI.yml
src/: lib.rs  peek_buf_reader.rs  pyreader.rs  pywriter.rs  rd.rs  wr.rs
tests/: test.py  test_basic.py
