[package]
name = "aiotarfile"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aiotarfile"
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
async-tar = "0.4.2"
pyo3 = "0.20.2"
pyo3-asyncio = { version = "0.20.0", features = ["async-std-runtime"] }
replace_with = "0.1.7"
