[package]
name = "aiotarfile"
version = "0.1.4-dev.1"
released_version = "0.1.3"
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aiotarfile"
crate-type = ["cdylib"]

[dependencies]
async-compression = { version = "0.4.6", features = ["futures-io", "xz", "gzip", "bzip2"] }
async-std = "1.12.0"
async-tar = "0.4.2"
pyo3 = "0.20.2"
pyo3-asyncio = { version = "0.20.0", features = ["async-std-runtime"] }
replace_with = "0.1.7"
futures-util = "0.3.30"
async-peek = "0.3.2"
